syntax = "proto3";

import "math.proto";
import "fuelNames.proto";

option java_package = "ca.wise.fuel.proto";
option csharp_namespace = "WISE.FuelProto";
option java_multiple_files = true;

package WISE.FuelProto;

message AccAlphaClosed {
	int32 version = 1;
	
	oneof msg {
		FuelName default = 2;
		Parms parms = 3;
	}
	
	message Parms {
		int32 version = 1;
		Math.Double init = 2;
		Math.Double multiplier = 3;
		Math.Double power = 4;
		Math.Double expMultiplier = 5;
	}
}

message AccAlphaOpen {
	int32 version = 1;
	
	oneof msg {
		FuelName default = 2;
		Parms parms = 3;
	}
	
	message Parms {
		int32 version = 1;
		Math.Double init = 2;
	}
}